Closed Bug 1025674 Opened 11 years ago Closed 11 years ago

--disable-ion --disable-unified-compilation build fails: js/src/frontend/TokenStream.cpp:659:51: error: invalid use of incomplete type 'struct JSCompartment'

Categories

(Core :: JavaScript Engine, defect)

Sun
OpenBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33
Tracking Status
firefox30 --- unaffected
firefox31 --- unaffected
firefox32 --- fixed
firefox33 --- fixed

People

(Reporter: gaston, Assigned: jbeich)

References

Details

Attachments

(1 file)

Since approx the last uplift, aurora fails on sparc64, see http://buildbot.rhaalovely.net/builders/mozilla-aurora-sparc64 /home/buildslave/mozilla-aurora-sparc64/build/js/src/frontend/TokenStream.cpp: In member function 'bool js::frontend::TokenStream::reportCompileErrorNumberVA(uint32_t, unsigned int, unsigned int, va_list)': /home/buildslave/mozilla-aurora-sparc64/build/js/src/frontend/TokenStream.cpp:638:51: error: invalid use of incomplete type 'struct JSCompartment' cx->compartment()->principals); ^ In file included from ../../dist/include/js/RootingAPI.h:16:0, from ../../dist/include/js/CallArgs.h:38, from ../../dist/include/js/CallNonGenericMethod.h:12, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/NamespaceImports.h:15, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/gc/Barrier.h:10, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/jsatom.h:14, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/vm/Runtime.h:20, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/jscntxt.h:15, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/frontend/TokenStream.h:19, from /home/buildslave/mozilla-aurora-sparc64/build/js/src/frontend/TokenStream.cpp:9: /home/buildslave/mozilla-aurora-sparc64/build/js/src/jspubtd.h:120:8: error: forward declaration of 'struct JSCompartment' m-c is fine, and diffing TokenStream.cpp i dont see a blatant difference - maybe a unified build issue, or a missing #include somewhere in the chain ?
It does exist on m-c but hidden behind --enable-unified-compilation. Here's the bootlegging chain. In file included from js/src/objdir/js/src/Unified_cpp_js_src1.cpp:2: In file included from js/src/frontend/ParseNode.cpp:7: In file included from js/src/frontend/ParseNode-inl.h:12: In file included from js/src/frontend/SharedContext.h:19: In file included from js/src/vm/ScopeObject.h:12: In file included from js/src/jsweakmap.h:10: js/src/jscompartment.h:10:2: error: test #error test ^ 1 error generated.
Blocks: 976446
Summary: aurora build broken on sparc64 → --disable-ion --disable-unified-compilation build fails: js/src/frontend/TokenStream.cpp:659:51: error: invalid use of incomplete type 'struct JSCompartment'
Attached patch fixSplinter Review
And --enable-ion --disable-unified-compilation is fine because of In file included from js/src/frontend/TokenStream.cpp:25: In file included from js/src/vm/HelperThreads.h:23: In file included from js/src/jit/Ion.h:15: js/src/jscompartment.h:10:2: error: test #error test ^ 1 error generated.
Attachment #8444163 - Flags: review?(bhackett1024)
Attachment #8444163 - Flags: review?(bhackett1024) → review+
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Comment on attachment 8444163 [details] [diff] [review] fix I'd say that one is an aurora candidate, probably with others for --disable-ion, looking at 1028745/734 & 775.... [Approval Request Comment] Bug caused by (feature/regressing bug #): 976446 User impact if declined: aurora broken for --disable-ion Testing completed (on m-c, etc.): yes Risk to taking this patch (and alternatives if risky): none, what could go wrong when adding an include for a NPOTB config ?
Attachment #8444163 - Flags: approval-mozilla-aurora?
Comment on attachment 8444163 [details] [diff] [review] fix Aurora approval granted.
Attachment #8444163 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: