Bug 1025674 - Unbreak non-unified build of --disable-ion after bug 976446. r=bhackett