js/src/frontend/TokenStream.cpp
@@ -17,6 +17,7 @@
 
 #include "jsatom.h"
 #include "jscntxt.h"
+#include "jscompartment.h"
 #include "jsexn.h"
 #include "jsnum.h"
 
